--- a/index.html
+++ b/index.html
@@ -1,33 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
-    <title>Assignment 3</title>
-  </head>
-  <body>
-    <div id="wrapper">
-      <aside id="aside">
-        <img src="" alt="" id="logo" />
-        <header id="header"></header>
-      </aside>
-      <section id="main">
-          <figure>
-              
-          </figure>
-          <div id="sub_section_second">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles.css" />
+  <title>Assignment 3</title>
+</head>
+
+<body>
+  <div id="wrapper">
+    <aside id="aside">
+      <img src="./img/utensils-solid.svg" alt="recipe logo" id="logo" />
+      <header id="header">
+        <img src="./img/search-logo.png" alt="" class="header-logo">
+        <p class="header-title">Find a recipe</p>
+        <img src="./img/logo.jpeg" alt="" class="header-logo">
+        <p class="header-title">Exlplore</p>
+        <img src="./img/lunch.png" alt="" class="header-logo">
+        <p class="header-title">Lunch recipes</p>
+        <img src="./img/dinner-logo.png" alt="" class="header-logo">
+        <p class="header-title">Dinner recipes</p>
+        <img src="./img/foodtrend.jpeg" alt="" class="header-logo">
+        <p class="header-title">Food trends</p>
+      </header>
+      <div class="left-subsection">
+        <p>Most Popular dishes</p>
+        <div class="left-sub-section">
+          <div class="title">Traditional Lunar New Year Foods</div>
+          <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img"></img>
+          <div class="left-sub-sec_text">Lunar New Year is a time for festive foods, whether you're celebrating Chinese
+            New Year, Vietnamese Tet, or Korean New Year, called Seollal. Read on to learn more about what foods to make
+            and how to celebrate.</div>
+        </div>
+        <div class="sub-section">
+          <div class="title">Our Top 10 Most New Recipes in Januaray</div>
+          <img src="./img/new-recipes.jpeg" alt="new recipes" class="left-sub-sec_img"></img>
+          <div class="left-sub-sec_text">We've put together our favorite Chinese shrimp recipes that are quick and easy,
+            but also exciting enough to rival your favorite Chinese take-out!
           </div>
-          <div id="sub_section_third">
-              
-          </div>
-      </section>
-    </div>
-    <footer id="footer">
-        <div class="copyright"></div>
-        <div clas="footer_logos"></div>
-    </footer>
-  </body>
+        </div>
+      </div>
+    </aside>
+    <section id="main">
+      <figure>
+        <img src="./img/right-section-food-main.jpeg" alt="food image">
+        <figcaption></figcaption>
+      </figure>
+      <div id="right-subsection-second">
+        <div class="right-subsection-second_logo"></div>
+        <div class="right-subsection-second_text"></div>
+        <input type="text" class="input">
+        <button class="right-subsections-second_button"></button>
+      </div>
+      <div id="right-subsection-third">
+        <img src="" alt="" class="right-section-third_img">
+        <div class="right-section-third_title"></div>
+        <div class="right-section-third_text"></div>
+        <div class="right-section-third_readMore">
+          <div class="right-section-third_readMore_left"></div>
+          <div class="right-section-third_readMore_right"></div>
+        </div>
+      </div>
+      <div id="right-subsection-third">
+        <img src="" alt="" class="right-section-third_img">
+        <div class="right-section-third_title"></div>
+        <div class="right-section-third_text"></div>
+        <div class="right-section-third_readMore">
+          <div class="right-section-third_readMore_left"></div>
+          <div class="right-section-third_readMore_right"></div>
+        </div>
+      </div>
+      <div id="right-subsection-third">
+        <img src="" alt="" class="right-section-third_img">
+        <div class="right-section-third_title"></div>
+        <div class="right-section-third_text"></div>
+        <div class="right-section-third_readMore">
+          <div class="right-section-third_readMore_left"></div>
+          <div class="right-section-third_readMore_right"></div>
+        </div>
+      </div>
+      <div id="right-subsection-third">
+        <img src="" alt="" class="right-section-third_img">
+        <div class="right-section-third_title"></div>
+        <div class="right-section-third_text"></div>
+        <div class="right-section-third_readMore">
+          <div class="right-section-third_readMore_left"></div>
+          <div class="right-section-third_readMore_right"></div>
+        </div>
+      </div>
+    </section>
+  </div>
+  <footer id="footer">
+    <div class="copyright"></div>
+    <div clas="footer_logos"></div>
+  </footer>
+</body>
+
 </html>
