left aside finished

--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
     <aside id="aside">
       <img src="./img/utensils-solid.svg" alt="recipe logo" id="logo" />
       <header id="header">
-        <img src="./img/search-logo.png" alt="" class="header-logo">
-        <p class="header-title">Find a recipe</p>
-        <img src="./img/logo.jpeg" alt="" class="header-logo">
-        <p class="header-title">Exlplore</p>
-        <img src="./img/lunch.png" alt="" class="header-logo">
-        <p class="header-title">Lunch recipes</p>
-        <img src="./img/dinner-logo.png" alt="" class="header-logo">
-        <p class="header-title">Dinner recipes</p>
-        <img src="./img/foodtrend.jpeg" alt="" class="header-logo">
-        <p class="header-title">Food trends</p>
+        <div class="header-item">
+          <img src="./img/search-logo.png" alt="" class="header-logo">
+          <p class="header-title">Find a recipe</p>
+        </div>
+        <div class="header-item">
+          <img src="./img/logo.jpeg" alt="" class="header-logo">
+          <p class="header-title">Exlplore</p>
+        </div>
+        <div class="header-item">
+          <img src="./img/lunch.png" alt="" class="header-logo">
+          <p class="header-title">Lunch recipes</p>
+        </div>
+        <div class="header-item">
+          <img src="./img/dinner-logo.png" alt="" class="header-logo">
+          <p class="header-title">Dinner recipes</p>
+        </div>
+        <div class="header-item">
+          <img src="./img/foodtrend.jpeg" alt="" class="header-logo">
+          <p class="header-title">Food trends</p>
+        </div>
       </header>
       <div class="left-subsection">
         <p>Most Popular dishes</p>
-        <div class="left-sub-section">
+        <div class="sub-section">
           <div class="title">Traditional Lunar New Year Foods</div>
           <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img"></img>
           <div class="left-sub-sec_text">Lunar New Year is a time for festive foods, whether you're celebrating Chinese
