--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
           <p class="header-title">Find a recipe</p>
         </div>
         <div class="header-item">
-          <img src="./img/logo.jpeg" alt="" class="header-logo">
-          <p class="header-title">Exlplore</p>
-        </div>
-        <div class="header-item">
           <img src="./img/lunch.png" alt="" class="header-logo">
           <p class="header-title">Lunch recipes</p>
         </div>
@@ -34,78 +30,150 @@
           <img src="./img/foodtrend.jpeg" alt="" class="header-logo">
           <p class="header-title">Food trends</p>
         </div>
-      </header>
-      <div class="left-subsection">
-        <p>Most Popular dishes</p>
-        <div class="sub-section">
-          <div class="title">Traditional Lunar New Year Foods</div>
-          <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img"></img>
-          <div class="left-sub-sec_text">Lunar New Year is a time for festive foods, whether you're celebrating Chinese
-            New Year, Vietnamese Tet, or Korean New Year, called Seollal. Read on to learn more about what foods to make
-            and how to celebrate.</div>
+        <div class="header-item">
+          <img src="./img/logo.jpeg" alt="" class="header-logo">
+          <p class="header-title">Explore</p>
         </div>
-        <div class="sub-section">
-          <div class="title">Our Top 10 Most New Recipes in Januaray</div>
-          <img src="./img/new-recipes.jpeg" alt="new recipes" class="left-sub-sec_img"></img>
-          <div class="left-sub-sec_text">We've put together our favorite Chinese shrimp recipes that are quick and easy,
-            but also exciting enough to rival your favorite Chinese take-out!
+      </header>
+      <div class="wrap_left-sub">
+        <div class="left-subsection">
+          <p>Most Popular dishes</p>
+          <div class="sub-section">
+            <div class="title">Traditional Lunar New Year Foods</div>
+            <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img"></img>
+            <div class="left-sub-sec_text">Lunar New Year is a time for festive foods, whether you're celebrating
+              Chinese
+              New Year, Vietnamese Tet, or Korean New Year, called Seollal. Read on to learn more about what foods to
+              make
+              and how to celebrate.</div>
+          </div>
+          <div class="sub-section">
+            <div class="title">Our Top 10 Most New Recipes in Januaray</div>
+            <img src="./img/new-recipes.jpeg" alt="new recipes" class="left-sub-sec_img"></img>
+            <div class="left-sub-sec_text">We've put together our favorite Chinese shrimp recipes that are quick and
+              easy,
+              but also exciting enough to rival your favorite Chinese take-out!
+            </div>
           </div>
         </div>
+
       </div>
     </aside>
     <section id="main">
       <figure>
         <img src="./img/right-section-food-main.jpeg" alt="food image">
-        <figcaption></figcaption>
+        <div class="mid-left img-text">Food makes you happy!</div>
+        <div class="bot-right img-text">Food is life!</div>
+        <div class="figcap">
+          <figcaption>World Cuisine</figcaption>
+          <figcaption>European</figcaption>
+          <figcaption>Asian</figcaption>
+          <figcaption>Mediterranean</figcaption>
+        </div>
       </figure>
       <div id="right-subsection-second">
-        <div class="right-subsection-second_logo"></div>
-        <div class="right-subsection-second_text"></div>
-        <input type="text" class="input">
-        <button class="right-subsections-second_button"></button>
-      </div>
-      <div id="right-subsection-third">
-        <img src="" alt="" class="right-section-third_img">
-        <div class="right-section-third_title"></div>
-        <div class="right-section-third_text"></div>
-        <div class="right-section-third_readMore">
-          <div class="right-section-third_readMore_left"></div>
-          <div class="right-section-third_readMore_right"></div>
+        <div class="right-subsection-second_logo">
+          <img src="./img/email.png" alt="email icon">
         </div>
+        <div class="right-subsection-second_text">Subscribe to get 10% off on first purchase item! Enter your email
+          address</div>
+        <input type="text" class="inp" placeholder="Email">
+        <button class="right-subsections-second_button button-54">Subscribe</button>
       </div>
-      <div id="right-subsection-third">
-        <img src="" alt="" class="right-section-third_img">
-        <div class="right-section-third_title"></div>
-        <div class="right-section-third_text"></div>
-        <div class="right-section-third_readMore">
-          <div class="right-section-third_readMore_left"></div>
-          <div class="right-section-third_readMore_right"></div>
+      <div class="third-sec">
+        <div id="right-subsection-third">
+          <img src="./img/section-1.jpeg" alt="section 1" class="right-section-third_img">
+          <div class="right-section-third_title">Feta-Stuffed Hamburgers</div>
+          <div class="right-section-third_text">These quick homemade hamburger burger buns bake up beautifully, with a
+            sturdy bottom that stands up to whatever you can pile on, but with an interior texture that's surprisingly
+            light.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
         </div>
-      </div>
-      <div id="right-subsection-third">
-        <img src="" alt="" class="right-section-third_img">
-        <div class="right-section-third_title"></div>
-        <div class="right-section-third_text"></div>
-        <div class="right-section-third_readMore">
-          <div class="right-section-third_readMore_left"></div>
-          <div class="right-section-third_readMore_right"></div>
+        <div id="right-subsection-third">
+          <img src="./img/section-2.jpeg" alt="section 2" class="right-section-third_img">
+          <div class="right-section-third_title">All Natural Ramen Noodles</div>
+          <div class="right-section-third_text">I've tried those make-your-own ramen seasoning recipes, but they taste
+            nothing like ramen in my opinion. This recipe hits the spot, and there is no MSG or artificial ingredients.
+          </div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
         </div>
-      </div>
-      <div id="right-subsection-third">
-        <img src="" alt="" class="right-section-third_img">
-        <div class="right-section-third_title"></div>
-        <div class="right-section-third_text"></div>
-        <div class="right-section-third_readMore">
-          <div class="right-section-third_readMore_left"></div>
-          <div class="right-section-third_readMore_right"></div>
+        <div id="right-subsection-third">
+          <img src="./img/section-3.jpeg" alt="section 3" class="right-section-third_img">
+          <div class="right-section-third_title">Sweet and Sour Veggies</div>
+          <div class="right-section-third_text">This great salad is very easy to prepare, and can be made the night
+            before serving. You can use just about any fresh veggies.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
+        </div>
+        <div id="right-subsection-third">
+          <img src="./img/section-4.jpeg" alt="section 4" class="right-section-third_img">
+          <div class="right-section-third_title">White Chocolate, Chocolate Cookies</div>
+          <div class="right-section-third_text">The reverse Chocolate Chip cookie. Rich dark chocolate with white
+            chocolate chips.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
+        </div>
+        <div id="right-subsection-third">
+          <img src="./img/section-1.jpeg" alt="section 1" class="right-section-third_img">
+          <div class="right-section-third_title">Feta-Stuffed Hamburgers</div>
+          <div class="right-section-third_text">These quick homemade hamburger burger buns bake up beautifully, with a
+            sturdy bottom that stands up to whatever you can pile on, but with an interior texture that's surprisingly
+            light.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
+        </div>
+        <div id="right-subsection-third">
+          <img src="./img/section-2.jpeg" alt="section 2" class="right-section-third_img">
+          <div class="right-section-third_title">All Natural Ramen Noodles</div>
+          <div class="right-section-third_text">I've tried those make-your-own ramen seasoning recipes, but they taste
+            nothing like ramen in my opinion. This recipe hits the spot, and there is no MSG or artificial ingredients.
+          </div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
+        </div>
+        <div id="right-subsection-third">
+          <img src="./img/section-3.jpeg" alt="section 3" class="right-section-third_img">
+          <div class="right-section-third_title">Sweet and Sour Veggies</div>
+          <div class="right-section-third_text">This great salad is very easy to prepare, and can be made the night
+            before serving. You can use just about any fresh veggies.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
+        </div>
+        <div id="right-subsection-third">
+          <img src="./img/section-4.jpeg" alt="section 4" class="right-section-third_img">
+          <div class="right-section-third_title">White Chocolate, Chocolate Cookies</div>
+          <div class="right-section-third_text">The reverse Chocolate Chip cookie. Rich dark chocolate with white
+            chocolate chips.</div>
+          <div class="right-section-third_readMore">
+            <div class="right-section-third_readMore_left"></div>
+            <div class="right-section-third_readMore_right"></div>
+          </div>
         </div>
       </div>
     </section>
+    <footer id="footer">
+      <div class="copyright">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe hic, dicta, repellendus
+        aspernatur, neque commodi esse dignissimos porro ea quos minus? Sequi exercitationem necessitatibus asperiores
+        rerum quod beatae quae optio!</div>
+      <div clas="footer_logos">#</div>
+    </footer>
   </div>
-  <footer id="footer">
-    <div class="copyright"></div>
-    <div clas="footer_logos"></div>
-  </footer>
 </body>
 
 </html>
