media query below 700px done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <div id="wrapper">
     <aside id="aside">
-      <img src="./img/utensils-solid.svg" alt="recipe logo" id="logo" />
+      <div class="logo-div">
+        <img src="./img/utensils-solid.svg" alt="recipe logo" id="logo" />
+      </div>
       <header id="header">
         <div class="header-item">
           <img src="./img/search-logo.png" alt="" class="header-logo">
@@ -72,13 +74,17 @@
         </div>
       </figure>
       <div id="right-subsection-second">
-        <div class="right-subsection-second_logo">
-          <img src="./img/email.png" alt="email icon">
+        <div class="second">
+          <div class="right-subsection-second_logo">
+            <img src="./img/email.png" alt="email icon">
+          </div>
+          <div class="right-subsection-second_text">Subscribe to get 10% off on first purchase item! Enter your email
+            address</div>
         </div>
-        <div class="right-subsection-second_text">Subscribe to get 10% off on first purchase item! Enter your email
-          address</div>
-        <input type="text" class="inp" placeholder="Email">
-        <button class="right-subsections-second_button button-54">Subscribe</button>
+        <div class="second">
+          <input type="text" class="inp" placeholder="Email">
+          <button class="right-subsections-second_button button-54">Subscribe</button>
+        </div>
       </div>
       <div class="third-sec">
         <div id="right-subsection-third">
