comp537 assignment3 done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>Most Popular dishes</p>
           <div class="sub-section">
             <div class="title">Traditional Lunar New Year Foods</div>
-            <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img"></img>
+            <img src="./img/lunar-foods.jpeg" alt="lunar foods" class="left-sub-sec_img">
             <div class="left-sub-sec_text">Lunar New Year is a time for festive foods, whether you're celebrating
               Chinese
               New Year, Vietnamese Tet, or Korean New Year, called Seollal. Read on to learn more about what foods to
@@ -51,7 +51,7 @@
           </div>
           <div class="sub-section">
             <div class="title">Our Top 10 Most New Recipes in Januaray</div>
-            <img src="./img/new-recipes.jpeg" alt="new recipes" class="left-sub-sec_img"></img>
+            <img src="./img/new-recipes.jpeg" alt="new recipes" class="left-sub-sec_img">
             <div class="left-sub-sec_text">We've put together our favorite Chinese shrimp recipes that are quick and
               easy,
               but also exciting enough to rival your favorite Chinese take-out!
@@ -62,32 +62,31 @@
       </div>
     </aside>
     <section id="main">
-      <figure>
+      <div class="content-img">
         <img src="./img/right-section-food-main.jpeg" alt="food image">
-        <div class="mid-left img-text">Food makes you happy!</div>
-        <div class="bot-right img-text">Food is life!</div>
-        <div class="figcap">
-          <figcaption>World Cuisine</figcaption>
-          <figcaption>European</figcaption>
-          <figcaption>Asian</figcaption>
-          <figcaption>Mediterranean</figcaption>
-        </div>
+        <h1 class="mid-left img-text">Food makes you happy!</h1>
+        <h1 class="bot-right img-text">Food is life!</h1>
+      </div>
+      <figure class="figcap">
+        <figcaption>
+          <div>World Cuisine</div>
+          <div>European</div>
+          <div>Asian</div>
+          <div>
+            Mediterranean </div>
+        </figcaption>
       </figure>
       <div id="right-subsection-second">
-        <div class="second">
-          <div class="right-subsection-second_logo">
-            <img src="./img/email.png" alt="email icon">
-          </div>
-          <div class="right-subsection-second_text">Subscribe to get 10% off on first purchase item! Enter your email
-            address</div>
+        <div class="right-subsection-second_logo">
+          <img src="./img/email.png" alt="email icon">
         </div>
-        <div class="second">
-          <input type="text" class="inp" placeholder="Email">
-          <button class="right-subsections-second_button button-54">Subscribe</button>
-        </div>
+        <div class="right-subsection-second_text">Subscribe to get 10% off on first purchase item! Enter your email
+          address</div>
+        <input type="text" class="inp" placeholder="Email">
+        <button class="right-subsections-second_button button-54">Subscribe</button>
       </div>
       <div class="third-sec">
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-1.jpeg" alt="section 1" class="right-section-third_img">
           <div class="right-section-third_title">Feta-Stuffed Hamburgers</div>
           <div class="right-section-third_text">These quick homemade hamburger burger buns bake up beautifully, with a
@@ -98,7 +97,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-2.jpeg" alt="section 2" class="right-section-third_img">
           <div class="right-section-third_title">All Natural Ramen Noodles</div>
           <div class="right-section-third_text">I've tried those make-your-own ramen seasoning recipes, but they taste
@@ -109,7 +108,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-3.jpeg" alt="section 3" class="right-section-third_img">
           <div class="right-section-third_title">Sweet and Sour Veggies</div>
           <div class="right-section-third_text">This great salad is very easy to prepare, and can be made the night
@@ -119,7 +118,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-4.jpeg" alt="section 4" class="right-section-third_img">
           <div class="right-section-third_title">White Chocolate, Chocolate Cookies</div>
           <div class="right-section-third_text">The reverse Chocolate Chip cookie. Rich dark chocolate with white
@@ -129,7 +128,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-1.jpeg" alt="section 1" class="right-section-third_img">
           <div class="right-section-third_title">Feta-Stuffed Hamburgers</div>
           <div class="right-section-third_text">These quick homemade hamburger burger buns bake up beautifully, with a
@@ -140,7 +139,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-2.jpeg" alt="section 2" class="right-section-third_img">
           <div class="right-section-third_title">All Natural Ramen Noodles</div>
           <div class="right-section-third_text">I've tried those make-your-own ramen seasoning recipes, but they taste
@@ -151,7 +150,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-3.jpeg" alt="section 3" class="right-section-third_img">
           <div class="right-section-third_title">Sweet and Sour Veggies</div>
           <div class="right-section-third_text">This great salad is very easy to prepare, and can be made the night
@@ -161,7 +160,7 @@
             <div class="right-section-third_readMore_right"></div>
           </div>
         </div>
-        <div id="right-subsection-third">
+        <div class="right-subsection-third">
           <img src="./img/section-4.jpeg" alt="section 4" class="right-section-third_img">
           <div class="right-section-third_title">White Chocolate, Chocolate Cookies</div>
           <div class="right-section-third_text">The reverse Chocolate Chip cookie. Rich dark chocolate with white
@@ -174,10 +173,15 @@
       </div>
     </section>
     <footer id="footer">
-      <div class="copyright">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe hic, dicta, repellendus
-        aspernatur, neque commodi esse dignissimos porro ea quos minus? Sequi exercitationem necessitatibus asperiores
-        rerum quod beatae quae optio!</div>
-      <div clas="footer_logos">#</div>
+      <div class="copyright">
+        <p class="contact">Contact Us</p>
+        <p class="number">000-1111-1111</p>
+      </div>
+      <div class="footer_logos">
+        <img src="./img/footer-fb.png" alt="facebook icon">
+        <img src="./img/footer-ig.png" alt="instagram icon">
+        <img src="./img/footer-twitter.png" alt="twitter icon">
+      </div>
     </footer>
   </div>
 </body>
